--- a/dumpsites.html
+++ b/dumpsites.html
@@ -54,14 +54,12 @@
       />
       <select id="waste-category">
         <option value="">Select Waste Type</option>
-        <option value="industrial-waste">Industrial Waste</option>
-        <option value="hazardous">Hazardous</option>
-        <option value="organic">Organic</option>
-        <option value="metal">Metal</option>
-        <option value="glass">Glass</option>
-        <option value="plastic">Plastic</option>
-        <option value="paper">Paper</option>
-        <option value="e-waste">E-Waste</option>
+        <option value="PAPER">PAPER</option>
+        <option value="NYLON">NYLON</option>
+        <option value="RUBBER">RUBBER</option>
+        <option value="BOTTLE">BOTTLE</option>
+        <option value="PLASTIC">PLASTIC</option>
+        <option value="TINS">TINS</option>
       </select>
     </div>
 
